--- a/docs/manpages/testparm.1
+++ b/docs/manpages/testparm.1
@@ -1,109 +1,85 @@
-.TH TESTPARM 1 "09 Oct 1998" "testparm 2.0.0-alpha11"
-.SH NAME
-testparm \- check an smbd configuration file for internal correctness
-.SH SYNOPSIS
-.B testparm
-[
-.I configfilename
-[
-.I hostname
-.I hostIP
-]
-]
-.SH DESCRIPTION
-This program is part of the Samba suite.
-
-.B testparm
-is a very simple test program to check an
-.B smbd
-configuration
-file for internal correctness. If this program reports no problems, you can use
-the configuration file with confidence that
-.B smbd
-will successfully
-load the configuration file.
-
-Note that this is NOT a guarantee that the services specified in the
-configuration file will be available or will operate as expected.
-
+.TH "testparm" "1" "23 Oct 1998" "Samba" "SAMBA" 
+.PP 
+.SH "NAME" 
+testparm \- check an smb\&.conf configuration file for internal correctness
+.PP 
+.SH "SYNOPSIS" 
+.PP 
+\fBtestparm\fP [configfilename [hostname hostIP] ]
+.PP 
+.SH "DESCRIPTION" 
+.PP 
+This program is part of the \fBSamba\fP suite\&.
+.PP 
+\fBtestparm\fP is a very simple test program to check an
+\fBsmbd\fP configuration file for internal
+correctness\&. If this program reports no problems, you can use the
+configuration file with confidence that \fBsmbd\fP
+will successfully load the configuration file\&.
+.PP 
+Note that this is \fINOT\fP a guarantee that the services specified in the
+configuration file will be available or will operate as expected\&.
+.PP 
 If the optional host name and host IP address are specified on the
 command line, this test program will run through the service entries
-reporting whether the specified host has access to each service.
-.SH OPTIONS
-.I configfilename
-
-.RS 3
-This is the name of the configuration file to check.
-.RE
-
-.I hostname
-
-.RS 3
-This is the name of the host to check access on.
-
-If this parameter is supplied, the
-.I hostIP
-parameter must also be supplied, or strange things may happen.
-.RE
-
-.I hostIP
-
-.RS 3
-This is the IP number of the host specified in the previous parameter.
-
-This number must be supplied if the
-.I hostname
-parameter is supplied, or strange things may happen.
-.RE
-.SH FILES
-.B smb.conf
-.RS 3
-This is usually the name of the configuration file used by
-.BR smbd .
-.RE
-.SH ENVIRONMENT VARIABLES
-Not applicable.
-.SH INSTALLATION
-The location of the server and its support files is a matter for individual
-system administrators. The following are thus suggestions only.
-
-It is recommended that the
-.B testparm
-program be installed under the /usr/local/samba hierarchy, in a directory readable
-by all, writeable only by root. The program itself should be executable by all.
-The program should NOT be setuid or setgid!
-.SH VERSION
-This man page is (mostly) correct for version 1.9.00 of the Samba suite, plus some
-of the recent patches to it. These notes will necessarily lag behind 
-development of the software, so it is possible that your version of 
-the program has extensions or parameter semantics that differ from or are not 
-covered by this man page. Please notify these to the address below for 
-rectification.
-.SH SEE ALSO
-.BR smb.conf (5),
-.BR smbd (8)
-.SH DIAGNOSTICS
-The program will issue a message saying whether the configuration file loaded
-OK or not. This message may be preceded by errors and warnings if the file
-did not load. If the file was loaded OK, the program then dumps all known
-service details to stdout.
-
-If a host name is specified but no host IP number, all bets are off.
-
-Other messages are self-explanatory.
-.SH BUGS
-None known.
-.SH CREDITS
-The original Samba software and related utilities were created by 
-Andrew Tridgell (samba-bugs@samba.anu.edu.au). Andrew is also the Keeper
-of the Source for this project.
-
-The
-.B testparm
-program and this man page were written by Karl Auer. Bug reports to
-samba-bugs@samba.anu.edu.au.
-
-See
-.BR samba (7)
-for a full list of contributors and details on how to 
-submit bug reports, comments etc.
+reporting whether the specified host has access to each service\&.
+.PP 
+.SH "OPTIONS" 
+.PP 
+.IP 
+.IP "\fBconfigfilename\fP" 
+This is the name of the configuration file to
+check\&. If this parameter is not present then the default
+\fBsmb\&.conf\fP file will be checked\&.
+.IP 
+.IP "\fBhostname\fP" 
+If this parameter and the following are specified,
+then testparm will examine the \fB"hosts
+allow"\fP and \fB"hosts
+deny"\fP parameters in the
+\fBsmb\&.conf\fP file to determine if the hostname
+with this IP address would be allowed acces to the
+\fBsmbd\fP server\&. If this parameter is supplied, the
+hostIP parameter must also be supplied\&.
+.IP 
+.IP "\fBhostIP\fP" 
+This is the IP address of the host specified in the
+previous parameter\&. This address must be supplied if the hostname
+parameter is supplied\&.
+.IP 
+.PP 
+.SH "FILES" 
+.PP 
+\fBsmb\&.conf\fP\&. This is usually the name of the
+configuration file used by \fBsmbd\fP\&.
+.PP 
+.SH "DIAGNOSTICS" 
+.PP 
+The program will issue a message saying whether the configuration file
+loaded OK or not\&. This message may be preceded by errors and warnings
+if the file did not load\&. If the file was loaded OK, the program then
+dumps all known service details to stdout\&.
+.PP 
+.SH "VERSION" 
+.PP 
+This man page is correct for version 2\&.0 of the Samba suite\&.
+.PP 
+.SH "SEE ALSO" 
+.PP 
+\fBsmb\&.conf (5)\fP, \fBsmbd (8)\fP
+.PP 
+.SH "AUTHOR" 
+.PP 
+The original Samba software and related utilities were created by
+Andrew Tridgell \fIsamba-bugs@samba\&.anu\&.edu\&.au\fP\&. Samba is now developed
+by the Samba Team as an Open Source project similar to the way the
+Linux kernel is developed\&.
+.PP 
+The original Samba man pages were written by Karl Auer\&. The man page
+sources were converted to YODL format (another excellent piece of Open
+Source software) and updated for the Samba2\&.0 release by Jeremy
+Allison, \fIsamba-bugs@samba\&.anu\&.edu\&.au\fP\&.
+.PP 
+See \fBsamba (7)\fP to find out how to get a full
+list of contributors and details on how to submit bug reports,
+comments etc\&.
